syntax = "proto3";

package socialnetwork;

// ===== SERVICE DEFINITION =====
service SocialNetworkService {
  // Gửi lời mời kết bạn ( Người gửi )
  rpc AddFriend(AddFriendRequest) returns (AddFriendResponse) {};

  // Xem tất cả lời mời kết bạn mà bản thân đã gửi ( Người gửi )
  rpc GetSentFriend(GetSentFriendRequest) returns (GetSentFriendResponse) {};

  // Xem tất cả lời mời kết bạn của bản thân để accept ( Người nhận )
  rpc GetIncomingFriend(GetIncomingFriendRequest) returns (GetIncomingFriendResponse) {};

  // Chấp nhận yêu cầu kết bạn ( Người nhận )
  rpc AcceptFriend(AcceptFriendRequest) returns (AcceptFriendResponse) {};

  // Hủy yêu cầu kết bạn ( chỉ áp dụng khi pending ) ( xóa record ) ( Người nhận )
  rpc RejectFriend(RejectFriendRequest) returns (RejectFriendResponse) {};

  // Lấy danh sách bạn bè của bản thân
  rpc GetAllFriend(GetAllFriendRequest) returns (GetAllFriendResponse) {};

  // Xóa 1 bạn bè nhất định ( xóa record )
  rpc Unfriend(UnfriendRequest) returns (UnfriendResponse) {};

  // Chặn bạn bè bất kì ( Blocking User )
  rpc BlockUser(BlockUserRequest) returns (BlockUserResponse) {};

  // Xem bạn và 1 user bất kì có phải bạn bè hay không
  rpc CanChat(CanChatRequest) returns (CanChatResponse) {};

  // Lưu tin nhắn chat giữa 2 người
  rpc SaveMessage(SaveMessageRequest) returns (SaveMessageResponse) {};

  // Lấy lịch sử nhắn tin của 2 người
  rpc GetMessage(GetMessageRequest) returns (GetMessageResponse) {};

  // Tạo group 
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse) {};

  // Add User vào group
  rpc AddUserToGroup(AddUserToGroupRequest) returns (AddUserToGroupResponse) {};

  // Check xem group có tồn tại và userId có tồn tại trong group hay không
  rpc CheckGroupUser(CheckGroupUserRequest) returns (CheckGroupUserResponse) {};

  // Xem all group mà bản thân đã vào
  rpc GetAllGroup(GetAllGroupRequest) returns (GetAllGroupResponse) {};
}

// ===== MESSAGES =====
enum FriendStatus {
  PENDING = 0;
  ACCEPTED = 1;
  BLOCKED = 2;
}

message RelationFriendInfo {
  int32 relationId = 1;
  int32 friendId = 2;
  string friendRealname = 3;
  string avatarUrl = 4;
  FriendStatus status = 5;
  string create_at = 6;
}

message FriendInfo {
  int32 friendId = 1;
  string friendRealname = 2;
  string avatarUrl = 3;
  FriendStatus status = 4;
}

message AddFriendRequest {
  int32 userId = 1;
  int32 friendId = 2;
}

message AddFriendResponse {
  int32 relationId = 1;
  int32 userId = 2;
  int32 friendId = 3;
  FriendStatus status = 4;
  string create_at = 5;
}

message GetSentFriendRequest {
  int32 userId = 1;
}

message GetSentFriendResponse {
  repeated RelationFriendInfo relationFriendInfo = 1;
}

message GetIncomingFriendRequest {
  int32 userId = 1;
}

message GetIncomingFriendResponse {
  repeated RelationFriendInfo relationFriendInfo = 1;
}

message AcceptFriendRequest {
  int32 relationId = 1;
  int32 userId = 2;
}

message AcceptFriendResponse {
  RelationFriendInfo relationFriendInfo = 1;
}

message RejectFriendRequest {
  int32 relationId = 1;
  int32 userId = 2;
}

message RejectFriendResponse {
  bool success = 1;
}

message GetAllFriendRequest {
  int32 userId = 1;
}

message GetAllFriendResponse {
  repeated FriendInfo friendInfo = 1;
}

message UnfriendRequest {
  int32 userId = 1;
  int32 friendId = 2;
}

message UnfriendResponse {
  bool success = 1;
}

message BlockUserRequest {
  int32 userId = 1;
  int32 friendId = 2;
}

message BlockUserResponse {
  bool success = 1;
}

message CanChatRequest {
  int32 userId = 1;
  int32 friendId = 2;
}

message CanChatResponse {
  bool canChat = 1;
}

message Message {
  string roomId = 1;
  int32 userId = 2;
  string content = 3;
  string create_at = 4;
}

message MessageTraVe {
  string roomId = 1;
  int32 userId = 2;
  string avatarUrl = 3;
  string realname = 4;
  string content = 5;
  string create_at = 6;
}

message SaveMessageRequest {
  Message message = 1;
}

message SaveMessageResponse {
  bool success = 1;
}

message GetMessageRequest {
  int32 userId = 1;
  string roomId = 2;
}

message GetMessageResponse {
  repeated MessageTraVe message = 1;
}

message CreateGroupRequest {
  string name = 1;
  string avatarUrl = 2;
  string description = 3;
  int32 ownerId = 4;
  int32 maxMember = 5;
  repeated int32 userId = 6;
}

message CreateGroupResponse {
  bool success = 1;
}

enum role {
  ADMIN = 0;
  MEMBER = 1;
}

message AddUserToGroupRequest {
  int32 userId = 1;
  int32 groupId = 2;
  int32 role = 3;
}

message AddUserToGroupResponse {
  bool success = 1;
}

message CheckGroupUserRequest {
  int32 userId = 1;
  int32 groupId = 2;
}

message CheckGroupUserResponse {
  bool success = 1;
}

message GetAllGroupRequest {
  int32 userId = 1;
}

message GroupInfo {
  int32 groupId = 1;
  string name = 2;
  string avatarUrl = 3;
  string description = 4;
  int32 ownerId = 5;
}

message GetAllGroupResponse {
  repeated GroupInfo groupInfo = 1;
}